###### TWE 5.5-1 RELEASED ######
2017-01-24 Sasa Bojanic <sasaboy@together.at>
   # Now branding procedure also supports additional java source files

2017-01-20 Sasa Bojanic <sasaboy@together.at>
   # Build procedure changed to produce twe-src-zip component (consisted of TWE source distribution)
   # Build procedure improved to support branding from GPE project
   
2017-01-05 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      * Supported new set of extended attributes for sending signed emails:
         - SMTP_EVENT_AUDIT_MANAGER_SIGNED_EMAIL_ACTIVITY,
         - SMTP_EVENT_AUDIT_MANAGER_SIGNED_EMAIL_PROCESS,
         - SMTP_LIMIT_HANDLER_SIGNED_EMAIL_ACTIVITY,
         - SMTP_LIMIT_HANDLER_SIGNED_EMAIL_PROCESS,
         - SMTP_DEADLINE_HANDLER_SIGNED_EMAIL,
         - SMTP_ERROR_HANDLER_SIGNED_EMAIL
      * Now can specify MailToolAgent to send signed emails

###### TWE 5.4-3 RELEASED (2016-12-26) ######
2016-12-20 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved icons in the panels for inserting system variables, xpdl variables, variables, ...

2016-12-13 Sasa Bojanic <sasaboy@together.at>
   # Support for new extended attribute BEAN_SHELL_SCRIPT_TO_EXECUTE_WHEN_OPENING
   
2016-12-09 Sasa Bojanic <sasaboy@together.at>
   # Fixed: click on + of Subflow/Activity Set didn't descend into them when graph is Zoomed In/Out
   # Fixed: finally properly fixed the issue when transition is selected when clicked on the activity
   # Shark mode: Improved XPDLStringVariable handling (now when Id of referenced variable changes, the GUI immediately reflects the change in the 
                 content of the variable that references it)

2016-12-06 Sasa Bojanic <sasaboy@together.at>
   # Fixed build procedure to exclude unnecessary things from twedoc.jar
   # Shark mode: extended attribute IS_WEBDAV_FOR_ACTIVITY_VISIBLE now by default set to true

2016-11-21 Sasa Bojanic <sasaboy@together.at>