@@ -11580,6 +11580,10 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
           SMTP_ERROR_HANDLER_SIGNED_EMAIL</para>
 
           <para>- Now can specify MailToolAgent to send signed emails</para>
+
+          <para>- Fix in SharkXPDLObjectFactory to properly adjust XPDL object
+          properties by creating special extended attribute (JaWE_TYPE) for
+          the custom type objects</para>
         </listitem>
 
         <listitem>
